--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2397,7 +2397,7 @@ input, select, textarea {
 		}
 
 		.image.left, .image.right {
-			max-width: 40%;
+			max-width: 25%;
 		}
 
 			.image.left img, .image.right img {
@@ -2408,6 +2408,7 @@ input, select, textarea {
 			float: left;
 			margin: 0 1.5em 1em 0;
 			top: 0.25em;
+
 		}
 
 		.image.right {
@@ -2901,7 +2902,7 @@ input, select, textarea {
 			-webkit-flex: 1;
 			-ms-flex: 1;
 			flex: 1;
-			padding: 1.5em;
+			padding: 0.5em;
 			color: #ffffff;
 			text-align: center;
 		}
@@ -3347,17 +3348,23 @@ input, select, textarea {
 					font-size: 0.9em;
 				}
 
-		/*@media screen and (max-width: 736px) {
+		@media screen and (max-width: 736px) {
 
 			#nav {
-				display: none;
+				width:100%;
+				max-width: calc(100%);
+				padding: 0;
+				position:fixed;
+				top:0;
+				left:0;
+				
 			}
 
 				#nav + #main {
 					padding-top: 0;
 				}
 
-		}*/
+		}
 
 /* Main */
 
