--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3351,20 +3351,78 @@ input, select, textarea {
 		@media screen and (max-width: 736px) {
 
 			#nav {
-				width:100%;
+				/*width:100%;
 				max-width: calc(100%);
 				padding: 0;
 				position:fixed;
 				top:0;
-				left:0;
-				
+				left:0;*/
+				display:none;
+
 			}
 
 				#nav + #main {
 					padding-top: 0;
 				}
-
 		}
+
+
+
+
+ .menu {
+            display: none;
+            flex-direction: column;
+            background-color: rgba(3, 34, 12, 0.8);
+            position: fixed;
+            top: 5px;
+            left: 5px;
+            width: 80%;
+            z-index: 1000;
+            transition:0.2s linear;
+        }
+
+        .menu a {
+            color: white;
+            padding: 15px;
+            text-decoration: none;
+            text-align: center;
+            display: block;
+        }
+
+        .menu a:hover {
+            background-color: rgba(3, 34, 12, 0.6);
+        }
+
+        .hamburger {
+            display: none;
+            flex-direction: column;
+            cursor: pointer;
+            padding: 10px;
+            background: #fff;
+            color: white;
+            width: 60px;
+            position: fixed;
+            top: 5px;
+            right: 5px;
+            border-radius:0 5px 0 0;
+
+        }
+
+        .bar {
+            background-color: #333;
+            height: 5px;
+            width: 35px;
+            margin: 4px 0;
+            border-radius:3px;
+        }
+
+        @media (max-width: 768px) {
+            .hamburger {
+                display: flex;
+            }
+        }
+
+
 
 /* Main */
 
