--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3941,6 +3941,31 @@ color:#000;
 
 
 
+.card1{
+
+ height:350px;
+ margin:0px auto;
+ overflow-y:hidden;
+ border-radius: 20px;
+ background: #f5f5f5;
+ position: relative;
+ padding: 1.8rem;
+ border: 2px solid #c3c6ce;
+ transition: 0.5s ease-out;
+ overflow: visible;
+ margin-bottom:30px;
+}
+
+.p-3 {
+  padding: 1rem !important;
+}
+
+.border {
+  border: 1px solid #dee2e6 !important;
+}
+.rounded {
+  border-radius: 0.25rem !important;
+}
 
 
 
