--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3968,6 +3968,17 @@ color:#000;
 }
 
 
+.info_legend {
+  z-index: 1000;
+  color: black;
+  background-color: #fff;
+  padding: 10px;
+  
+  line-height: 1.4;
+  font-size: 14px;
+  box-shadow: 0 0 10px rgba(0,0,0,0.2);
+  border-radius: 5px;
 
+}
 
 
